oops I did it again

--- a/NuId-Ch2/NeutrinoID.tex
+++ b/NuId-Ch2/NeutrinoID.tex
@@ -29,7 +29,7 @@ The creation of a ``slice" is the first step of the Pandora processing. A slice 
 %\subsubsection{Clustering and Vertex Finding \textcolor{green}{Wouter}} 
 \par In order to reconstruct the interactions in 3D, Pandora needs to match the information from at least two different views and create a neutrino vertex. Pandora computes the 2D clustering on the hits in each slice and in each plane separately. Then, a number of 3D candidate vertices is created by finding positions that project down on to the ends of the available 2D clusters. All the possible vertex candidates are fed into the support vector machine (SVM) vertex selection, and the candidate with the highest SVM score is chosen. This 3D vertex is used to split any existing clusters that straddle the vertex. Then, the cluster matching algorithms are run, where the clusters are compared between views and modified to improve the matching.
 
-\subsection{SliceID : Cosmic Removal through topology and scintillation-light \textcolor{green}{Wouter}}
+\subsection{SliceID : Cosmic Removal through topology and scintillation-light \textcolor{green}{Wouter... P.R. Elena}}
 \label{sec:sliceID:SliceID}
 \par After the Pandora pattern-recognition algorithm suite has isolated individual interactions into reconstructed \emph{slices} and removed the obvious cosmics, the remaining task is to identify which (if any) slice is associated to a neutrino interaction. Scintillation light information is used to reject slices incompatible with light recorded in-time with the beam. Additionally, topological cuts aimed at rejecting stopping-muon events which enter the TPC are used. The \texttt{SliceID} is at the core of all neutrino selections performed in this analysis; this first, common step is responsible for the majority of cosmic-rejection.
 \\
