--- a/main.tex
+++ b/main.tex
@@ -312,7 +312,8 @@ Finally, the observed spectra from the \nueccnopinp and the \numu selections are
 
 \newpage
 
-\section{Overview of Neutrino Identification: Pandora \texttt{SliceID}}
+%\section{Overview of Neutrino Identification: Pandora SliceID}
+\section{Overview of Neutrino Identification}
 \label{sec:sliceID}
 \input{NuId-Ch2/NeutrinoID}
 
